--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     font-size: 40px;
     margin-bottom: 20px;
     color: #ff7d9f; /* Soft pastel pinkish-red */
+    text-align: center;
   }
   
   h3 {
@@ -68,7 +69,9 @@ body {
   
   /* Cards container */
   .cards,
-  .projects-container {
+  .resume-container,
+  .projects-container,
+  .blogs-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -77,8 +80,10 @@ body {
   }
   
   /* Individual card style */
+  .resume,
   .card,
-  .project {
+  .project,
+  .blogs {
     background-color: #ffffff;
     padding: 25px;
     width: 550px;
@@ -88,8 +93,10 @@ body {
     backdrop-filter: blur(5px);
   }
   
+  .resume:hover,
   .card:hover,
-  .project:hover {
+  .project:hover,
+  .blogs:hover {
     transform: translateY(-8px); /* Slight lift on hover */
     box-shadow: 0 4px 20px rgba(255, 126, 159, 0.3); /* Soft coral shadow */
   }
@@ -135,6 +142,9 @@ body {
   
   p{
     font-size: 25px;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   li{
@@ -143,4 +153,10 @@ body {
 
   a{
     font-size: 25px;
+  }
+
+  footer{
+    text-align: center; 
+    padding: 1rem; 
+    margin-top: 2rem;
   }
