--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ body {
     font-size: 26px;
     margin-bottom: 10px;
     color: #ff7d9f; /* Same for subheadings */
+
+  }
+  h4 {
+    font-size: 23px;
+    margin-bottom: 10px;
+    color: #ff7d9f; /* Same for subheadings */
   }
   
   /* Cards container */
